# swagger.yml
@@ -28,14 +28,10 @@ paths:
           description: generic error response
           schema:
             $ref: "#/definitions/error"
-  /user/{id}:
+  /user:
     post:
+      description: create a new user
       parameters:
-        - type: integer
-          format: ObjectId
-          name: id
-          in: path
-          required: true
         - name: body
           in: body
           schema:
@@ -51,7 +47,9 @@ paths:
           description: generic error response
           schema:
             $ref: "#/definitions/error"
+  /user/{id}:
     put:
+      description: update the user information
       parameters:
         - type: integer
           format: ObjectId
@@ -70,11 +68,17 @@ paths:
           schema:
             $ref: "#/definitions/user"
         default:
-          description: generic error response
+          description: Generic error
           schema:
             $ref: "#/definitions/error"
+        403:
+          description: Forbidde
+          schema:
+            $ref: "#/definitions/error"
+
   /user/{id}/location:
-    post:
+    put:
+      description: update user position
       parameters:
         - type: integer
           format: ObjectId
@@ -89,22 +93,48 @@ paths:
         - user
       responses:
         201:
-          description: Created
+          description: Update
           schema:
             $ref: "#/definitions/user"
         default:
           description: generic error response
           schema:
             $ref: "#/definitions/error"
+        403:
+          description: Forbidde
+          schema:
+            $ref: "#/definitions/error"
+
+  /matches:
+    get:
+      tags:
+        - matches
+      responses:
+        201:
+          description: Get a list of matches 15 mathces
+          schema:
+
+            $ref: "#/definitions/user"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/error"
+        402:
+          description: subscription requerid
+          schema:
+            $ref: "#/definitions/error"
 
 definitions:
   position:
+    type: object
     properties:
       latitude:
+        type: number
         format: float64
         minimum: -90
         maximum: 90
       longitude:
+        type: number
         format: float64
         minimum: -180
         maximum: 180
@@ -172,11 +202,18 @@ definitions:
         minLength: 10
       lastPosition:
         $ref: "#/definitions/position"
+      radio:
+        description: distance in km to find matches
+        type: integer
+        format: uint64
+        maximum: 30
+        minimum: 1
     required:
       - fullName
       - interestIn
       - gender
       - birthDate
+      - radio
   error:
     type: object
     required:
